responsive dashboard navbar

--- a/careerbuddy-backend/package.json
+++ b/careerbuddy-backend/package.json
@@ -12,6 +12,7 @@
   "author": "TechyNerds",
   "license": "ISC",
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
