--- a/careerbuddy/package.json
+++ b/careerbuddy/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.9.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.14.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
